# framed-pay

./: .air.toml  .env  .env.example  .gitignore  Cargo.toml  Makefile  askama.toml  deployment_note  docker-compose.yml  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tailwind.config.js  test.http  tsconfig.json  tsconfig.node.json  vite.config.ts
app/controllers/api/auth/: controller.go
app/controllers/api/home/: controller.go
app/controllers/web/home/: controller.go
app/models/: main.go  user.go
app/routes/: routes.go
app/utils/route/: main.go
app/views/: index.gohtml  layout.gohtml
docker/go/: Dockerfile
docker/rust/: Dockerfile
migrations/: 20230910173718_create_users_table.up.sql
migrations/2023-09-13-012857_create_users/: up.sql
public/: index.html
public/assets/css/: index-cda2a71f.css
public/assets/js/: index-39a3509a.js
src/: config.rs  errors.rs  main.rs  main.ts  utility.ts
src/assets/css/: app.scss
src/components/: Footer.vue  Logo.vue  NavLink.vue  Theme.vue
src/components/form/: Button.vue  Checkbox.vue  Checkboxes.vue  Form.vue  Input.vue  Seperator.vue
src/components/icons/: IconArrowRight.vue  IconBookHalf.vue  IconBoxSeam.vue  IconCheck2.vue  IconChevronRight.vue  IconEmojiHeartEyes.vue  IconHouse.vue  IconPersonCircle.vue  IconX.vue
src/components/payment/plans/: AllPlans.vue
src/controllers/: api_key_controller.rs  auth.rs  auth_controller.rs  home.rs  home_controller.rs  iframe_controller.rs  mod.rs  user.rs  user_controller.rs
src/middlewares/: auth.rs  auth_middleware.rs  error_middleware.rs  jwt.rs  mod.rs
src/migrations/: 20231002221246_create_users_table.up.sql  20231010225251_jobs.up.sql  20231029235646_create_api_keys_table.up.sql
src/models/: api_key.rs  gatewayItem.ts  job.rs  job_model.rs  mapItem.ts  mod.rs  response.rs  schema.rs  transaction.rs  user.rs  user_model.rs  users.rs
src/repositories/: api_key_repository.rs  job_repository.rs  mod.rs  user.rs  user_repository.rs
src/router/: index.ts
src/routes/: api.rs  mod.rs  web.rs
src/services/: api_key_service.rs  cookie.rs  email.rs  job.rs  job_service.rs  json_response.rs  mod.rs  queue.rs  request_validator.rs  response.rs  str.rs  templates.rs  user.rs  user_service.rs
src/templates/: mod.rs
src/templates/emails/: password_reset.html
src/templates/views/iframe/: loader.html  renderer.html
src/utilities/: crypto.rs  mod.rs  str.rs  templates.rs
src/views/authentication/: AuthenticationIndex.vue  ForgotPassword.vue  Login.vue  Register.vue
src/views/dashboard/: Dashboard.vue
src/views/public/: Main.vue
web/: .env  .eslintrc.cjs  iframe.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  fonts.ts  main.ts  utility.ts
web/src/assets/css/: app.scss
web/src/components/: DropDown.vue  Footer.vue  Link.vue  Logo.vue  NavLink.vue  Theme.vue
web/src/components/form/: Button.vue  Checkbox.vue  (+7 more)
web/src/models/: countries.js  gatewayItem.ts  generic.ts  mapItem.ts  menuItem.ts  optionItem.ts  user.ts
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/utilities/: dialog.ts  request.ts  utility.ts  validator.ts
web/src/views/: LandingPage.vue  Loading.vue
(+31 files in other folders)
