[package]
name = "framed_pay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
env_logger = "0.10.0"
actix-files = "0.6.2"
serde_json = "1.0.106"
actix-cors = "0.6.4"
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
jsonwebtoken = "8.3.0"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
validator = { version = "0.16.1", features = ["derive"] }
actix-web-validator = "5.0.1"
derive_more = "0.99.17"
futures-util = "0.3.28"
sendgrid = "0.19.2"
lazy_static = "1.4.0"
reqwest = "0.11.20"
rand = "0.8.5"
apalis = { version = "0.4.4", features = ["redis"] }
log = "0.4.20"

